<?xml version="1.0"?>
<package format="2">
  <name>tutorial_topico</name>
  <version>0.0.0</version>
  <description>Tutorial para aprender Topics</description>

  <maintainer email="luis@todo.todo">luis</maintainer>

  <license>TODO</license>
  <!--
  <url type="website">http://wiki.ros.org/tutorial_topico</url> 
  -->
  <author email="lumazaca17@hotmail.com">Luis Zambrano</author> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>  </export>
</package>
